[package]
name = "biglog_sort"
version = "0.1.0"
authors = ["Aloxaf <aloxafx@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
extsort = { git = "https://github.com/Aloxaf/extsort-rs", branch = "sort_by" }
hashbrown = { version = "0.1", features = ["rayon"] }
rayon = "1.0"
jemallocator = "0.3"
fxhash = "0.2"

[profile.release]
lto = true
opt-level = 3
# debug = true
