[package]
name = "bitlogin"
version = "1.0.0"
authors = ["Aloxaf <bailong104@gmail.com>"]

[dependencies]
reqwest = "0.9.1"
json = "0.11.13"
nix = "0.11.0"
failure = "0.1.2"
hmac = "0.6.3"
md-5 = "0.7.0"
base64 = "0.9.3"
byteorder = "1.2.6"
sha-1 = "0.7.0"
clap = {version = "^2.32.0", features = ["yaml"]}
regex = "1.0.5"
maplit = "1.0.1"
