[package]
name = "webapi"
version = "0.1.0"
authors = ["Aloxaf <bailong104@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde_derive = "1.0.80"
serde = "1.0.80"
serde_json = "1.0.32"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.brainfuck]
path = "../brainfuck"
